--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "dependencies": {
     "confidence": "^3.0.0",
     "hapi": "^13.3.0",
+    "hapi-auth-cookie": "^6.1.1",
     "hoek": "^4.0.0",
     "joi": "^8.0.5",
     "jot": "^2.0.1",
+    "jsonwebtoken": "^6.2.0",
     "massive": "^2.2.0"
   },
   "devDependencies": {
